--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Data site
+img/*/*.jpeg
+img/*/*.jpg
+img/*/*.png
+!img/covers/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
